--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
-    "require": {
-        "catfan/medoo": "^1.7",
-        "twig/twig": "^3.0"
-    }
+    "name": "leet/micro",
+    "description": "PHP Micro Framework",
+    "type": "project",
+    "license": "non",
+    "require": {}
 }
